--- a/Xcode-iOS/SDL/SDL.xcodeproj/xcshareddata/xcschemes/libSDL-Catalyst.xcscheme
+++ b/Xcode-iOS/SDL/SDL.xcodeproj/xcshareddata/xcschemes/libSDL-Catalyst.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1020"
+   LastUpgradeVersion = "1120"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "F3E3C56022406928007D243C"
-               BuildableName = "libSDLmain.a"
-               BlueprintName = "libSDLmain-iOS"
+               BlueprintIdentifier = "C69D8443239E611D001ADC43"
+               BuildableName = "libSDL2_Catalyst.a"
+               BlueprintName = "libSDL-Catalyst"
                ReferencedContainer = "container:SDL.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,15 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "F3E3C56022406928007D243C"
-            BuildableName = "libSDLmain.a"
-            BlueprintName = "libSDLmain-iOS"
-            ReferencedContainer = "container:SDL.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -59,9 +50,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "F3E3C56022406928007D243C"
-            BuildableName = "libSDLmain.a"
-            BlueprintName = "libSDLmain-iOS"
+            BlueprintIdentifier = "C69D8443239E611D001ADC43"
+            BuildableName = "libSDL2_Catalyst.a"
+            BlueprintName = "libSDL-Catalyst"
             ReferencedContainer = "container:SDL.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
